test/functions/resolution/errors/testBadCallCandidates.9.good
testBadCallCandidates.chpl:45: In function 'main':
testBadCallCandidates.chpl:74: error: unresolved call 'baz(42)'
testBadCallCandidates.chpl:42: note: this candidate did not match: baz(x: C)
testBadCallCandidates.chpl:74: note: because call actual argument #1 with type int(64)
testBadCallCandidates.chpl:42: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:30: note: candidates are: C.baz(x: string)
testBadCallCandidates.chpl:33: note:                 type D.baz(x: int)
